--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
-
-@config "../tailwind.config.js";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 /* 🌌 Extra: Arkaplan ve yazı rengi için baz stil (opsiyonel) */
 
